<resources>
    <string name="app_name">西财一键溜了</string>
    <string name="one_key_to_report">一键报备溜了并保存配置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="swufe_auth_keyword">authserver</string>
    <string name="sure">确定</string>
    <string name="swufe_login_page_prompt">首次使用请先登录, 最好点击一周内免登录, 免得天天登, 累得瓜西流了</string>
    <string name="swufe_login_snackbar_prompt">请先登录, 最好点击一周内免登录</string>
    <string name="tips">温馨提示</string>
    <string name="swufe_reenter_login_page_prompt">这应该不是您第一次遇到登录界面, 很可能是密码输错的原因, 您可以修改密码再试试</string>
    <string name="activity_param_key">reportInfo</string>
    <string name="swufe_username_literal">西财用户名</string>
    <string name="swufe_password_literal">西财密码</string>
    <string name="custom_start_time_literal">自定义出发时间</string>
    <string name="custom_end_time_literal">自定义结束时间</string>
    <string name="custom_destination_literal">自定义目的地</string>
    <string name="custom_transportation_literal">自定义交通</string>
    <string name="custom_reason_literal">自定义理由</string>
    <!--    default hint value-->
    <string name="default_destination_hint">东门;</string>
    <string name="default_transportation_hint">步行, 简简单单恰个饭;</string>
    <string name="default_reason_hint">学好 Java C++, 走遍天下都不怕;\\n掌握计网懂算法, 面遍硅谷我称霸;</string>
    <!--end default hint value-->

    <string name="swufe_username_password_hint">可不输, 输后需登录时帮你自动填账号密码</string>
    <string name="campus_literal">所在校区</string>
    <string name="campus_liulin">柳林校区</string>
    <string name="campus_guanghua">光华校区</string>
    <string name="submit_directly_literal">直接打卡, 我不想再跳过去手动点提交了</string>
    <string name="start_time_literal">出发时间</string>
    <string name="one_min_ago_start_literal">1 分钟前, 直接刷脸溜</string>
    <string name="custom_literal">自定义</string>
    <string name="end_time_literal">结束时间</string>
    <string name="default_end_time_literal">22:55 极限时间</string>
    <string name="default_destination_east">东门</string>
    <string name="default_destination_west">西门</string>
    <string name="default_destination_canyon">召唤师峡谷</string>
    <string name="destination_literal">目的地</string>
    <string name="default_transportation_walk">步行</string>
    <string name="default_transportation_bike">骑行</string>
    <string name="default_transportation_fly">飞行</string>
    <string name="transportation_literal">交通方式</string>
    <string name="reason_literal">理由</string>
    <string name="law_risk_declaration">我了解, 知悉并遵守学校的防疫规定, 由此产生的任何问题与开发者无关, 由本人承担</string>
    <string name="default_eat_literal">恰饭</string>
    <string name="default_findjob_literal">找工作</string>
    <string name="default_study_lteral">悟道</string>

    <string name="sample_device_admin_description">我的广播</string>
    <string name="sample_device_admin">广播接收者</string>
    <string name="click_web_view_submit">document.getElementById(\"btnstuapply\").click()</string>
    <string name="click_to_submit_on_web_view_page">点击提交打卡</string>
</resources>
